move TEventBaseManager to folly/io/async/EventBaseManager
Summary:
This class isn't thrift specific anymore, especially now that TEventBase->EventBase.
Specific use case in folly: folly/experimental/wangle/concurrent/IOThreadPoolExecutor
EventBaseManager itself needs some work/cleanup, but that is for a later diff
For instance, we might try to push towards only allowing access to the singleton, and towards
removing overrides. i.e. only getEventBase. But that's pending an audit of how people are using it now.

Note that the ProfiledMutex protecting the event base set has been made a regular std::mutex

Test Plan:
compiled thrift/lib/cpp|cpp2, made a pass at fixing forward declarations elsewhere
will let contbuild help me iterate

Reviewed By: hans@fb.com

Subscribers: trunkagent, nli, fbcode-common-diffs@, davejwatson, hero-diffs@, zeus-diffs@, andrewcox, netego-diffs@, alandau, apollo-diffs@, antonl, laser-diffs@, ads-dsp-eng@, darshan, micha, njormrod, panin, hdoshi, scuba-diffs@, bmatheny

FB internal diff: D1590827

Tasks: 5247981

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -116,6 +116,7 @@ nobase_follyinclude_HEADERS = \
 	io/async/AsyncTimeout.h \
 	io/async/DelayedDestruction.h \
 	io/async/EventBase.h \
+	io/async/EventBaseManager.h \
 	io/async/EventFDWrapper.h \
 	io/async/EventHandler.h \
 	io/async/EventUtil.h \
@@ -239,6 +240,7 @@ libfolly_la_SOURCES = \
 	io/RecordIO.cpp \
 	io/async/AsyncTimeout.cpp \
 	io/async/EventBase.cpp \
+	io/async/EventBaseManager.cpp \
 	io/async/EventHandler.cpp \
 	io/async/Request.cpp \
 	io/async/HHWheelTimer.cpp \
