Fix opensource build
Summary: D1615707 moved State.h to Core.h, but didn't update Makefile.am

Test Plan: visual

Reviewed By: davejwatson@fb.com

Subscribers: fugalh, njormrod

FB internal diff: D1617562

Blame Revision: D1615707

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -195,7 +195,7 @@ nobase_follyinclude_HEADERS = \
 	wangle/Try-inl.h \
 	wangle/Try.h \
 	wangle/WangleException.h \
-	wangle/detail/State.h
+	wangle/detail/Core.h
 
 FormatTables.cpp: build/generate_format_tables.py
 	build/generate_format_tables.py
