Move Acceptor to wangle
Summary:
Initial pass at moving acceptor to wangle.  Involves moving most of the config stuff from proxygen/lib/services, and *all* of the ssl stuff from proxygen/lib/ssl.

Only minor changes:
* Acceptor can be overriden to use thrift socket types, so I don't have to change TTransportException everywhere just yet
* proxygen::Exception to std::runtime_exception in a few spots - looks like it is entirely bad config exceptions, so it should be okay
* Just used std::chrono directly instead of stuff in Time.h (which is just typedefs and simple helpers)

Test Plan:
used in D1539327

fbconfig -r proxygen/httpserver; fbmake runtests

Probably other projects are broken, will iterate to fix

None of the failling tests look related

Reviewed By: dcsommer@fb.com

Subscribers: oleksandr, netego-diffs@, hphp-diffs@, ps, trunkagent, doug, fugalh, alandau, bmatheny, njormrod, mshneer, folly-diffs@

FB internal diff: D1638358

Tasks: 5002353

Signature: t1:1638358:1414526683:87a405e3c24711078707c00b62a50b0e960bf126

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -88,6 +88,26 @@ nobase_follyinclude_HEADERS = \
 	experimental/wangle/rx/types.h \
 	experimental/wangle/ConnectionManager.h \
 	experimental/wangle/ManagedConnection.h \
+	experimental/wangle/acceptor/Acceptor.h \
+	experimental/wangle/acceptor/ConnectionCounter.h \
+	experimental/wangle/acceptor/SocketOptions.h \
+	experimental/wangle/acceptor/DomainNameMisc.h \
+	experimental/wangle/acceptor/LoadShedConfiguration.h \
+	experimental/wangle/acceptor/NetworkAddress.h \
+	experimental/wangle/acceptor/ServerSocketConfig.h \
+	experimental/wangle/acceptor/TransportInfo.h \
+	experimental/wangle/ssl/ClientHelloExtStats.h \
+	experimental/wangle/ssl/DHParam.h \
+	experimental/wangle/ssl/PasswordInFile.h \
+	experimental/wangle/ssl/SSLCacheOptions.h \
+	experimental/wangle/ssl/SSLCacheProvider.h \
+	experimental/wangle/ssl/SSLContextConfig.h \
+	experimental/wangle/ssl/SSLContextManager.h \
+	experimental/wangle/ssl/SSLSessionCacheManager.h \
+	experimental/wangle/ssl/SSLStats.h \
+	experimental/wangle/ssl/SSLUtil.h \
+	experimental/wangle/ssl/TLSTicketKeyManager.h \
+	experimental/wangle/ssl/TLSTicketKeySeeds.h \
 	FBString.h \
 	FBVector.h \
 	File.h \
@@ -301,7 +321,16 @@ libfolly_la_SOURCES = \
 	experimental/wangle/concurrent/IOThreadPoolExecutor.cpp \
 	experimental/wangle/concurrent/ThreadPoolExecutor.cpp \
 	experimental/wangle/ConnectionManager.cpp \
-	experimental/wangle/ManagedConnection.cpp
+	experimental/wangle/ManagedConnection.cpp \
+	experimental/wangle/acceptor/Acceptor.cpp \
+	experimental/wangle/acceptor/SocketOptions.cpp \
+	experimental/wangle/acceptor/LoadShedConfiguration.cpp \
+	experimental/wangle/acceptor/TransportInfo.cpp \
+	experimental/wangle/ssl/PasswordInFile.cpp \
+	experimental/wangle/ssl/SSLContextManager.cpp \
+	experimental/wangle/ssl/SSLSessionCacheManager.cpp \
+	experimental/wangle/ssl/SSLUtil.cpp \
+	experimental/wangle/ssl/TLSTicketKeyManager.cpp
 
 if HAVE_LINUX
 nobase_follyinclude_HEADERS += \
