Move AsyncSocket to folly (try 2)
Summary:

Test Plan:

Reviewed By: dcsommer@fb.com

Subscribers: trunkagent, mcduff, hitesh, doug, alandau, bmatheny, njormrod, mshneer, folly-diffs@

FB internal diff: D1644071

Signature: t1:1644071:1414526899:c41dd55e2957a7e1fcc54508e20cdb4a9c8c30d4

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -132,6 +132,8 @@ nobase_follyinclude_HEADERS = \
 	io/async/AsyncTimeout.h \
 	io/async/AsyncTransport.h \
 	io/async/AsyncServerSocket.h \
+	io/async/AsyncSocket.h \
+	io/async/AsyncSocketException.h \
 	io/async/DelayedDestruction.h \
 	io/async/EventBase.h \
 	io/async/EventBaseManager.h \
@@ -262,6 +264,7 @@ libfolly_la_SOURCES = \
 	io/ShutdownSocketSet.cpp \
 	io/async/AsyncTimeout.cpp \
 	io/async/AsyncServerSocket.cpp \
+	io/async/AsyncSocket.cpp \
 	io/async/EventBase.cpp \
 	io/async/EventBaseManager.cpp \
 	io/async/EventHandler.cpp \
