move wangle/Executor.h to folly/ root
Summary:
this removes the dep EventBase has on wangle as we prepare to split off wangle
also changes namespace from folly::wangle to folly

Test Plan: just a couple of codemods so waiting for contbuild

Reviewed By: davejwatson@fb.com

Subscribers: trunkagent, fbcode-common-diffs@, chaoyc, search-fbcode-diffs@, zeus-diffs@, nli, cold-storage-diffs@, unicorn-diffs@, targeting-diff-backend@, hannesr, vighnesh, fugalh, alandau, bmatheny, adityab, zhuohuang, luk, darshan, gunjan, hdoshi, dzhulgakov, alihussains, panin, ves, mshneer, folly-diffs@, lins, nimishshah

FB internal diff: D1737376

Tasks: 5802833

Signature: t1:1737376:1418423430:82d219c34fcc50218c380a17435e5880e53db6bd

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -65,6 +65,7 @@ nobase_follyinclude_HEADERS = \
 	dynamic-inl.h \
 	Exception.h \
 	ExceptionWrapper.h \
+	Executor.h \
 	EvictingCacheMap.h \
 	experimental/Bits.h \
 	experimental/EliasFanoCoding.h \
@@ -235,7 +236,6 @@ nobase_follyinclude_HEADERS = \
 	Varint.h \
 	VersionCheck.h \
 	wangle/Deprecated.h \
-	wangle/Executor.h \
 	wangle/Future-inl.h \
 	wangle/Future.h \
 	wangle/InlineExecutor.h \
