global io executor
Summary:
This is something we've talked about for a while. It's also an alternative to the mechanism in D1714645.
If we like it, I'll do something similar for a global cpu executor. That functionality should probably just be
baked into Executor itself instead of a separate subclass, which is why the IOExecutor stuff is in Executor.h/.cpp,
because it'll be pretty similar. The main exception is that for getCPUExecutor() you could return a default global
InlineExecutor instead of exploding as in getIOExecutor()

Test Plan: wangle unit, will start plumbing this into the services in #5003045 if we like it

Reviewed By: davejwatson@fb.com

Subscribers: hannesr, trunkagent, fugalh, alandau, mshneer, folly-diffs@, bmatheny

FB internal diff: D1727894

Tasks: 5002442

Signature: t1:1727894:1418344077:9e54088a6acb3f78e53011a32fd1dfe8b3214c1d

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -82,6 +82,8 @@ nobase_follyinclude_HEADERS = \
 	experimental/wangle/concurrent/Codel.h \
 	experimental/wangle/concurrent/CPUThreadPoolExecutor.h \
 	experimental/wangle/concurrent/FutureExecutor.h \
+	experimental/wangle/concurrent/GlobalExecutor.h \
+	experimental/wangle/concurrent/IOExecutor.h \
 	experimental/wangle/concurrent/IOThreadPoolExecutor.h \
 	experimental/wangle/concurrent/LifoSemMPMCQueue.h \
 	experimental/wangle/concurrent/NamedThreadFactory.h \
@@ -328,6 +330,8 @@ libfolly_la_SOURCES = \
 	experimental/TestUtil.cpp \
 	experimental/wangle/concurrent/CPUThreadPoolExecutor.cpp \
 	experimental/wangle/concurrent/Codel.cpp \
+	experimental/wangle/concurrent/GlobalExecutor.cpp \
+	experimental/wangle/concurrent/IOExecutor.cpp \
 	experimental/wangle/concurrent/IOThreadPoolExecutor.cpp \
 	experimental/wangle/concurrent/ThreadPoolExecutor.cpp \
 	experimental/wangle/ConnectionManager.cpp \
