codemod: folly/wangle/ -> folly/wangle/futures
Summary: Last thing before moving experimental/wangle here. Once everything is in the same directory I'm probably going to consolidate experimental/wangle/concurrent with the executors in this directory into wangle/executors/. And probably rename some of these targets. For now, a dumb move is enough.

Test Plan: waiting for contbuild

Reviewed By: davejwatson@fb.com

Subscribers: trunkagent, fbcode-common-diffs@, chaoyc, search-fbcode-diffs@, lars, ruibalp, hero-diffs@, zeus-diffs@, vikas, danielg, mcduff, cold-storage-diffs@, unicorn-diffs@, ldbrandy, targeting-diff-backend@, netego-diffs@, fugalh, adamsyta, atlas2-eng@, alandau, bmatheny, adityab, everstore-dev@, zhuohuang, sweeney, mwa, jgehring, smarlow, akr, bnitka, jcoens, luk, zhguo, jying, apodsiadlo, alikhtarov, fuegen, dzhulgakov, mshneer, folly-diffs@, wch, tingy, hannesr

FB internal diff: D1740327

Tasks: 5802833

Signature: t1:1740327:1418752541:82d7486293b0a12938730ae66d480c120aded4dc

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -237,21 +237,21 @@ nobase_follyinclude_HEADERS = \
 	Uri-inl.h \
 	Varint.h \
 	VersionCheck.h \
-	wangle/Deprecated.h \
-	wangle/Future-inl.h \
-	wangle/Future.h \
-	wangle/InlineExecutor.h \
-	wangle/ManualExecutor.h \
-	wangle/OpaqueCallbackShunt.h \
-	wangle/Promise-inl.h \
-	wangle/Promise.h \
-	wangle/QueuedImmediateExecutor.h \
-	wangle/ScheduledExecutor.h \
-	wangle/Try-inl.h \
-	wangle/Try.h \
-	wangle/WangleException.h \
-	wangle/detail/Core.h \
-	wangle/detail/FSM.h
+	wangle/futures/Deprecated.h \
+	wangle/futures/Future-inl.h \
+	wangle/futures/Future.h \
+	wangle/futures/InlineExecutor.h \
+	wangle/futures/ManualExecutor.h \
+	wangle/futures/OpaqueCallbackShunt.h \
+	wangle/futures/Promise-inl.h \
+	wangle/futures/Promise.h \
+	wangle/futures/QueuedImmediateExecutor.h \
+	wangle/futures/ScheduledExecutor.h \
+	wangle/futures/Try-inl.h \
+	wangle/futures/Try.h \
+	wangle/futures/WangleException.h \
+	wangle/futures/detail/Core.h \
+	wangle/futures/detail/FSM.h
 
 FormatTables.cpp: build/generate_format_tables.py
 	build/generate_format_tables.py
@@ -323,8 +323,8 @@ libfolly_la_SOURCES = \
 	TimeoutQueue.cpp \
 	Uri.cpp \
 	Version.cpp \
-	wangle/InlineExecutor.cpp \
-	wangle/ManualExecutor.cpp \
+	wangle/futures/InlineExecutor.cpp \
+	wangle/futures/ManualExecutor.cpp \
 	experimental/io/FsUtil.cpp \
 	experimental/Singleton.cpp \
 	experimental/TestUtil.cpp \
