--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -231,11 +231,14 @@ nobase_follyinclude_HEADERS = \
 	wangle/futures/Promise.h \
 	wangle/futures/QueuedImmediateExecutor.h \
 	wangle/futures/ScheduledExecutor.h \
+	wangle/futures/Timekeeper.h
 	wangle/futures/Try-inl.h \
 	wangle/futures/Try.h \
 	wangle/futures/WangleException.h \
 	wangle/futures/detail/Core.h \
 	wangle/futures/detail/FSM.h \
+	wangle/futures/detail/ThreadWheelTimekeeper.h \
+	wangle/futures/detail/Types.h \
 	wangle/rx/Observable.h \
 	wangle/rx/Observer.h \
 	wangle/rx/Subject.h \
@@ -339,8 +342,11 @@ libfolly_la_SOURCES = \
 	wangle/concurrent/IOThreadPoolExecutor.cpp \
 	wangle/concurrent/GlobalExecutor.cpp \
 	wangle/concurrent/ThreadPoolExecutor.cpp \
+	wangle/futures/detail/ThreadwheelTimekeeper.cpp \
+	wangle/futures/Future.cpp \
 	wangle/futures/InlineExecutor.cpp \
 	wangle/futures/ManualExecutor.cpp \
+	wangle/futures/QueuedImmediateExecutor.cpp \
 	wangle/ssl/PasswordInFile.cpp \
 	wangle/ssl/SSLContextManager.cpp \
 	wangle/ssl/SSLSessionCacheManager.cpp \
