kill remaining Futures-related Wangle references
Summary: grep around for wangle, adjust where appropriate

Test Plan: contbuild

Reviewed By: hans@fb.com

Subscribers: trunkagent, fbcode-common-diffs@, ruibalp, zeus-diffs@, vikas, targeting-diff-backend@, alandau, mwa, jgehring, zhguo, jying, darshan, fuegen, mshneer, folly-diffs@, lins, maxwellsayles, jsedgwick

FB internal diff: D1777581

Tasks: 5960242

Signature: t1:1777581:1421361395:2ee8bfeca76dafe7376a217c66e0a4eaf3ef416a

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -87,6 +87,7 @@ nobase_follyinclude_HEADERS = \
 	futures/Deprecated.h \
 	futures/Future-inl.h \
 	futures/Future.h \
+	futures/FutureException.h \
 	futures/InlineExecutor.h \
 	futures/ManualExecutor.h \
 	futures/OpaqueCallbackShunt.h \
@@ -97,7 +98,6 @@ nobase_follyinclude_HEADERS = \
 	futures/Timekeeper.h \
 	futures/Try-inl.h \
 	futures/Try.h \
-	futures/WangleException.h \
 	futures/detail/Core.h \
 	futures/detail/FSM.h \
 	futures/detail/ThreadWheelTimekeeper.h \
