--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -225,6 +225,9 @@ nobase_follyinclude_HEADERS = \
 	wangle/acceptor/ServerSocketConfig.h \
 	wangle/acceptor/SocketOptions.h \
 	wangle/acceptor/TransportInfo.h \
+	wangle/bootstrap/ServerBootstrap.h \
+	wangle/bootstrap/ServerBootstrap-inl.h \
+	wangle/bootstrap/ClientBootstrap.h \
 	wangle/channel/AsyncSocketHandler.h \
 	wangle/channel/ChannelHandler.h \
 	wangle/channel/ChannelHandlerContext.h \
@@ -343,6 +346,7 @@ libfolly_la_SOURCES = \
 	wangle/acceptor/ManagedConnection.cpp \
 	wangle/acceptor/SocketOptions.cpp \
 	wangle/acceptor/TransportInfo.cpp \
+	wangle/bootstrap/ServerBootstrap.cpp \
 	wangle/concurrent/CPUThreadPoolExecutor.cpp \
 	wangle/concurrent/Codel.cpp \
 	wangle/concurrent/IOThreadPoolExecutor.cpp \
