Add FunctionScheduler to Makefile.am
Summary: D1845525 was missing some makefile changes.

Test Plan: Examine similar change in D1732895

Reviewed By: markisaa@fb.com

Subscribers: sdwilsh, folly-diffs@, yfeldblum

FB internal diff: D1890197

Signature: t1:1890197:1425526255:e9a23fd96a89d4463cbdfda1385d4fd5f5781e8e

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -72,6 +72,7 @@ nobase_follyinclude_HEADERS = \
 	experimental/Bits.h \
 	experimental/EliasFanoCoding.h \
 	experimental/EventCount.h \
+	experimental/FunctionScheduler.h \
 	experimental/io/FsUtil.h \
 	experimental/Singleton.h \
 	experimental/Singleton-inl.h \
@@ -338,6 +339,7 @@ libfolly_la_SOURCES = \
 	Uri.cpp \
 	Version.cpp \
 	experimental/io/FsUtil.cpp \
+	experimental/FunctionScheduler.cpp \
 	experimental/Singleton.cpp \
 	experimental/TestUtil.cpp \
 	experimental/Select64.cpp \
