Add JSON Schema Validator
Summary:
This is a validator for  JSON schema (http://json-schema.org/) that works on
folly::dynamic. Apparently there are no good open source ones for C++,
especially not if you want to use folly::dynamic. I am going to use this to
validate JSON configs.

It supports basically everything from the standard, except for fetching schemas
via http, and using id refs. It supports enough to check schemas against the
metaschema.

Currently you can define a schema that will crash on validation, if it's
infinitely self-recursive. See the unit test case that reproduces this.
Fixing this seems hard though, so I didn't bother. It would also probably
be slower for normal usage.

Test Plan: unit test

Reviewed By: lesha@fb.com

Subscribers: trunkagent, folly-diffs@, yfeldblum

FB internal diff: D1847657

Signature: t1:1847657:1425605163:635dc523aeda1b588c3634d0dc1a48d50a53db79

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -78,6 +78,7 @@ nobase_follyinclude_HEADERS = \
 	experimental/Singleton-inl.h \
 	experimental/TestUtil.h \
 	experimental/Select64.h \
+	experimental/JSONSchema.h \
 	FBString.h \
 	FBVector.h \
 	File.h \
@@ -343,6 +344,7 @@ libfolly_la_SOURCES = \
 	experimental/Singleton.cpp \
 	experimental/TestUtil.cpp \
 	experimental/Select64.cpp \
+	experimental/JSONSchema.cpp \
 	wangle/acceptor/Acceptor.cpp \
 	wangle/acceptor/ConnectionManager.cpp \
 	wangle/acceptor/LoadShedConfiguration.cpp \
